# license-desk

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.keycloak.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  celerybeat-schedule  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: audit.py  database.py  events.py  exceptions.py  middleware.py  oidc.py  pagination.py  security.py  storage.py
backend/app/domains/access/: router.py
backend/app/domains/assets/: router.py  schemas.py  service.py
backend/app/domains/audit/: router.py  schemas.py  service.py
backend/app/domains/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/domains/export/: router.py  schemas.py  service.py
backend/app/domains/notifications/: router.py  schemas.py  service.py
backend/app/domains/references/: router.py  schemas.py  service.py
backend/app/domains/settings/: router.py  schemas.py  service.py
backend/app/models/: __init__.py  asset.py  asset_cost_history.py  asset_field_value.py  asset_notification_setting.py  asset_payment.py  asset_type.py  asset_type_field.py  audit_log.py  base.py  currency.py  notification.py  organization.py  project.py  renewal_period.py  system_setting.py  user.py  user_permission.py
backend/app/tasks/: celery_app.py  payment_reminder.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: create_default_user.py  seed_demo_data.py
backend/tests/domains/: test_assets.py  test_licenses.py
(+47 files in other folders)
