[project]
name = "license-desk"
version = "0.1.0"
description = "Intangible asset management service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35",
    "celery>=5.4",
    "redis>=5.2",

    "httpx>=0.28",
    "cryptography>=43",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
